# geng-template

./: Cargo.toml  flake.nix
assets/shaders/: splitcut.glsl
src/: context.rs  game.rs  main.rs  prelude.rs
src/assets/: mod.rs  options.rs
src/context/: mod.rs  music.rs  sfx.rs
src/menu/: loading.rs  mod.rs
src/model/: mod.rs
src/model/logic/: mod.rs
src/render/: mod.rs  post.rs  util.rs
src/util/: mod.rs
